--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
 
+<html> 
+  <title>
+   First Website
+  </title>
+
+  <body>
+    <h1> Knowledgebase</h1> 
+  </body>
+  <style>
+    body {
+      background-color:green;
+      color:#fff;
+      text-align:center;
+    }
+  </style>
+</html>
